<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAccountActivity">

    <EditText
        android:id="@+id/etViewAccHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/host"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etViewAccUser"
        app:layout_constraintEnd_toStartOf="@+id/btnCopyAccHost"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnCopyAccHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnCopyAccUser"
        app:layout_constraintEnd_toStartOf="@+id/btnSeeAccHost"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etViewAccHost"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_copy_24" />

    <ImageButton
        android:id="@+id/btnSeeAccHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnSeeAccUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCopyAccHost"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eye_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etViewAccUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/user"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etViewAccPassword"
        app:layout_constraintEnd_toStartOf="@+id/btnCopyAccUser"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etViewAccHost" />

    <ImageButton
        android:id="@+id/btnCopyAccUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCopyAccPassword"
        app:layout_constraintEnd_toStartOf="@+id/btnSeeAccUser"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etViewAccUser"
        app:layout_constraintTop_toBottomOf="@+id/btnCopyAccHost"
        app:srcCompat="@drawable/ic_copy_24"
        android:backgroundTint="@color/purple_200"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnSeeAccUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnSeeAccPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCopyAccUser"
        app:layout_constraintTop_toBottomOf="@+id/btnSeeAccHost"
        app:srcCompat="@drawable/ic_eye_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etViewAccPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEditAccount"
        app:layout_constraintEnd_toStartOf="@+id/btnCopyAccPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etViewAccUser" />

    <ImageButton
        android:id="@+id/btnCopyAccPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/btnEditAccount"
        app:layout_constraintEnd_toStartOf="@+id/btnSeeAccPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etViewAccPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnCopyAccUser"
        app:srcCompat="@drawable/ic_copy_24"
        android:backgroundTint="@color/purple_200"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnSeeAccPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/btnEditAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCopyAccPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnSeeAccUser"
        app:srcCompat="@drawable/ic_eye_24"
        android:backgroundTint="@color/purple_200"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnEditAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etViewAccPassword" />

    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@id/tvLastChangedAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditAccount" />

    <TextView
        android:id="@+id/tvLastChangedAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDeleteAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>