<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAccountActivity">

    <EditText
        android:id="@+id/etAccHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/host"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etAccUser"
        app:layout_constraintEnd_toStartOf="@+id/btnSeeAddAccHost"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSeeAddAccHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnSeeAddAccUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etAccHost"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eye_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etAccUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etAccPassword"
        app:layout_constraintEnd_toStartOf="@+id/btnSeeAddAccUser"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAccHost" />

    <ImageButton
        android:id="@+id/btnSeeAddAccUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnSeeAddAccPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etAccUser"
        app:layout_constraintTop_toBottomOf="@+id/btnSeeAddAccHost"
        app:srcCompat="@drawable/ic_eye_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etAccPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/spAccFolder"
        app:layout_constraintEnd_toStartOf="@+id/btnSeeAddAccPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAccUser" />

    <ImageButton
        android:id="@+id/btnSeeAddAccPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/spAccFolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etAccPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnSeeAddAccUser"
        app:srcCompat="@drawable/ic_eye_24"
        android:backgroundTint="@color/purple_200"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spAccFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddAccOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAccPassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnAddAccOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spAccFolder" />

</androidx.constraintlayout.widget.ConstraintLayout>